--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Employee Payroll Tracker</title>
-  <link rel="stylesheet" href="./Develop/style.css" />
+  <link rel="stylesheet" href="./Develop/script.js" />
 </head>
 
 <body>
