--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Employee Payroll Tracker</title>
-  <link rel="stylesheet" href="./Develop/style.css" />
+  <link rel="stylesheet" href="Develop/style.css" />
 </head>
 
 <body>
@@ -14,6 +14,7 @@
     <header>
       <h1>Employee Payroll Tracker</h1>
     </header>
+
     <div class="card">
       <div class="card-header">
        <h2>Employee Roster</h2>
