--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
     </div>
   </div>
-  <script src="./Develop/script.js"></script>
+  <script src="Develop/script.js"></script>
 </body>
 
 </html>
