--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Employee Payroll Tracker</title>
-  <link rel="stylesheet" href="Develop/style.css" />
+  <link rel="stylesheet" href="Assets/style.css" />
 </head>
 
 <body>
@@ -37,7 +37,7 @@
       </div>
     </div>
   </div>
-  <script src="Develop/script.js"></script>
+  <script src="Assets/script.js"></script>
 </body>
 
 </html>
